--- a/app/scss/layout/_graphs.scss
+++ b/app/scss/layout/_graphs.scss
@@ -42,7 +42,7 @@
   @media (min-width: 769px){
     display: flex;
     div{
-      flex: 1;
+      flex: 1 40%;
       padding: 1rem;
     }
     &-bar{
